[package]
name = "mneme-parsers-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for mneme's tree-sitter-based code graph extractor"
license-file.workspace = true
# publish = false — PyPI distribution is handled via pyproject.toml / maturin

[lib]
# cdylib = Python extension module (.so / .pyd)
# rlib   = allows `cargo test` to test the Rust wrapper logic directly
#
# IMPORTANT: name = "mneme_parsers_py" (not "mneme_parsers") so the cargo
# artifact filename does not collide with sdk/js's lib target inside the
# shared workspace `target/release/` dir on macOS / Linux. Maturin renames
# the wheel's .so to match the `#[pymodule]` function name (`mneme_parsers`)
# at wheel-build time, so Python users still `import mneme_parsers`.
crate-type = ["cdylib", "rlib"]
name = "mneme_parsers_py"

[dependencies]
# PyO3 — Python / Rust bridge
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }

# Bridge to the core parsers crate
mneme-parsers = { path = "../../parsers" }

# Tokio runtime — pyo3 tasks run in a dedicated single-threaded runtime
# to avoid entangling Python's GIL with Tokio's async executor.
tokio = { version = "1.40", features = ["rt", "macros"] }

# Error display
thiserror = "1.0"

[dev-dependencies]
# Used by `cargo test` to exercise the Rust wrappers without a Python runtime
tokio = { version = "1.40", features = ["rt", "macros", "test-util"] }
